# ag-wf01

./: .gitignore  README.md  README_S2.md  app.py  pyproject.toml  requirements.txt  test_retriever.py
agent/: base.py  simple_agent.py
config/: settings.py
data/: docs.txt
llm/: base.py  local_llm.py
models/: message.py
rag/: ingest.py  retriever.py
tools/: base.py  retrieval_tool.py
