[project]
name = "agentic-ai-wf01"
version = "0.1.0"
description = "From-scratch Agentic AI system for architectural learning"
readme = "README.md"
authors = [
{name = "Basavaraj"}
]
requires-python = ">=3.10"

dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
